# persidict

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  contributing.md  design_principles.md  docstrings_and_comments.md  error_handling.md  etag_conditional_ops.md  etag_conditional_ops_cheatsheet.md  etag_conditional_ops_requirements.md  pyproject.toml  setup.py  type_hints.md  unit_tests.md
.github/workflows/: ruff.yml  unit-tests.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
persidict/: safe_chars.py  safe_str_tuple.py
persidict/tests/: test_actual_s3.py  test_safe_str_tuple.py
src/persidict/: __init__.py  _version_info.py  basic_s3_dict.py  cached_appendonly_dict.py  cached_dict_imp.py  cached_dicts.py  cached_mutable_dict.py  empty_dict.py  exceptions.py  file_dir_dict.py  jokers.py  jokers_and_status_flags.py  local_dict.py  nochange_const.py  overlapping_multi_dict.py  persi_dict.py  s3_dict.py  s3_dict_file_dir_cached.py  s3_dict_legacy.py  s3_dict_new.py  safe_chars.py  safe_str_tuple.py  safe_str_tuple_signing.py  singletons.py  write_once_dict.py
tests/: README.md  __init__.py  atomic_test_config.py  conftest.py  data_for_mutable_tests.py  minimum_sleep.py  ownership.yaml  test_actual_s3.py  test_advanced_dict_methods.py  test_append_only_dict_cached.py  test_base_url.py  test_basic_s3_setdefault.py  test_basics.py  test_bool.py  test_case_sensitivity.py  test_complex_keys.py  test_concurrency_filedirdict.py  test_concurrency_filedirdict_10.py  test_concurrency_filedirdict_20.py  test_concurrency_filedirdict_3.py  test_concurrency_filedirdict_5.py  test_copy_methods.py  test_delete_current.py  test_delete_if_exists.py  test_discard.py  test_discard_local_dict.py  test_empty_dict.py  test_equality.py  test_etag.py  test_etaggable_dict_cached.py  test_filedirdict_etag_fallback.py  test_filedirdict_setdefault.py  test_get_params.py  test_get_subdict.py  test_ior.py  test_iterators.py  test_jokers.py  test_keep_current.py  test_local_dict.py  test_nochange.py  (+24 more)
tests/__live_actions__/: __init__.py  clean_dist_live_action.py  clear_cache_live_action.py  refresh_venv_live_action.py  update_stats_live_action.py
tests/atomic_type_support/: __init__.py  test_astropy_types.py  test_builtin_types.py  test_networkx_types.py  test_numpy_types.py  test_pandas_types.py  test_pil_types.py  test_polars_types.py  test_pyarrow_types.py  test_scipy_types.py  test_shapely_types.py  test_stdlib_types.py  test_sympy_types.py  test_torch_types.py
tests/atomic_types/: __init__.py  test_astropy_types.py  test_networkx_types.py  test_numpy_types.py  test_pyarrow_types.py  test_scipy_types.py  test_shapely_types.py  test_torch_types.py
tests/compatibility_serialization/: test_work_with_basic_datatypes.py  test_work_with_pandas.py  test_work_with_python_src.py
tests/conditional_operations_a/: test_delete_item_if_etag.py  test_discard_item_if_etag.py  test_error_handling_edge_cases.py  test_get_item_if_etag.py  test_jokers_with_conditional_ops.py  test_set_item_if_etag.py
tests/conditional_operations_o/: __init__.py  test_conditional_ops_cached_mutable.py  test_conditional_ops_mutable.py  test_conditional_ops_special_cases.py  test_set_item_if_etag_changed_none_semantics.py
tests/core_behavior/: test_advanced_dict_methods.py  test_append_only_delete.py  test_append_only_setitem.py  test_basics.py  test_bool.py  test_case_sensitivity.py  test_copy_methods.py  test_delete_current.py  test_delete_if_exists.py  test_discard.py  test_discard_empty_dict.py  test_empty_dict.py  test_exception_contracts.py  test_get_value_and_etag_base.py  test_ior.py  test_iterators.py  test_jokers.py  test_keep_current.py  test_pop_no_redundant_read.py  test_popitem.py  test_random_key.py  test_setdefault.py  test_typing.py  test_unpicklable.py  test_update_method.py  test_validate_returned_value.py
tests/dictionary_variants/: test_append_only_dict_cached.py  test_etaggable_dict_cached.py  test_mutable_cached_conflict_cache_safety.py  test_overlapping_multi_dict.py  test_overlapping_multi_dict_clear_is_format_scoped.py  test_write_once_dict.py
tests/entity_tag_operations/: test_etag.py
tests/key_handling/: test_complex_keys.py  test_path_traversal.py  test_safe_chars.py  test_safe_str_tuple.py
tests/simple_storage_service/: test_basic_s3_conditional_mismatch_returns_result.py  test_basic_s3_iteration_and_metadata.py  test_basic_s3_setdefault.py  test_basic_s3_setdefault_race.py  test_root_prefix_behavior.py  test_s3_append_only_etag.py  test_s3_append_only_setitem_atomic.py  test_s3_validate_returned_value.py
tests/storage_backends/: test_concurrency_filedirdict.py  test_digest_length_matrix.py  test_discard_local_dict.py  test_filedirdict_etag_consistency.py  test_filedirdict_etag_fallback.py  test_filedirdict_ignores_junk_files.py  test_filedirdict_iteration_races.py  test_filedirdict_retry.py  test_filedirdict_setdefault.py  test_local_dict.py  test_local_dict_etag_shared_counter.py  test_serialization_format_validation.py  test_unc_support.py  test_utf8_encoding.py
tests/subdictionary_operations/: test_get_subdict.py  test_subdicts.py  test_subdicts_method.py
(+40 files in other folders)
