[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "persidict"
version = "0.105.26"
description = "Simple persistent key-value store for Python. Values are stored as files on a disk or as S3 objects on AWS cloud."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Vlad (Volodymyr) Pavlov", email = "vlpavlov@ieee.org"}
]
keywords = ["persistence", "dicts", "distributed", "parallel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "parameterizable",
    "lz4",
    "joblib",
    "jsonpickle",
    "deepdiff",
    "boto3"
]

[project.urls]
Home = "https://github.com/pythagoras-dev/persidict"
Docs = "https://persidict.readthedocs.io/"

[project.optional-dependencies]
aws = [
    "boto3"
]

docs = [
    "sphinx",
    "pydata_sphinx_theme",
    "furo",
]

dev = [
    "numpy",
    "pandas",
    "boto3",
    "moto",
    "pytest",
    "coverage",
    "sphinx",
    "pydata_sphinx_theme",
]
