[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persidict"
version = "0.109.0"
description = "Simple persistent key-value store for Python. Values are stored as files on a disk or as S3 objects on AWS cloud."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Vlad (Volodymyr) Pavlov", email = "vlpavlov@ieee.org"}
]
keywords = ["persistence", "dicts", "distributed", "parallel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "mixinforge",
    "lz4",
    "joblib",
    "jsonpickle",
    "deepdiff",
    "boto3",
    "pytest>=9.0.2",
    "uv>=0.9.24",
    "pandas>=2.3.3",
]

[project.urls]
Home = "https://github.com/pythagoras-dev/persidict"
Docs = "https://persidict.readthedocs.io/"

[project.optional-dependencies]
aws = [
    "boto3"
]

docs = [
    "sphinx",
    "pydata_sphinx_theme",
    "furo",
]

dev = [
    "numpy",
    "pandas",
    "boto3",
    "moto",
    "pytest",
    "coverage",
    "sphinx",
    "pydata_sphinx_theme",
]


[tool.pytest.ini_options]
addopts = [
    "-ra",                    # Show summary of all test outcomes
    "--strict-markers",       # Raise error on unknown markers
    "--strict-config",        # Raise error on config issues
    "--showlocals",           # Show local variables in tracebacks
    "--verbose",              # Verbose output
    "--cache-clear",          # Clear cache before each run
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_live_action.py"]
markers = [
    """live_actions: marks tests as live actions that operate on the actual project (deselect with '-m \"not live_actions\"')""",
]

[tool.coverage.run]
source = ["src/persidict"]
branch = true
